--- a/TaskTrackerApp.Frontend/package.json
+++ b/TaskTrackerApp.Frontend/package.json
@@ -4,7 +4,9 @@
   "description": "A minimal app to keep track of my daily and weekly goals",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack",
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,21 @@
   "bugs": {
     "url": "https://github.com/gaureshph/TaskTrackerApp/issues"
   },
-  "homepage": "https://github.com/gaureshph/TaskTrackerApp#readme"
+  "homepage": "https://github.com/gaureshph/TaskTrackerApp#readme",
+  "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.100.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  }
 }
