--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ TaskTrackerApp.Backend/TaskTracker.API/obj
 TaskTrackerApp.Backend/TaskTracker.Repository/obj
 TaskTrackerApp.Backend/TaskTracker.API/bin
 TaskTrackerApp.Backend/TaskTracker.Repository/bin
+/TaskTrackerApp.Backend/.vs
