--- a/TaskTrackerApp.Frontend/package.json
+++ b/TaskTrackerApp.Frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "task-tracker-app",
   "version": "1.0.0",
+  "homepage": ".",
   "description": "A minimal app to keep track of my daily and weekly goals",
   "main": "index.js",
   "scripts": {
@@ -21,13 +22,13 @@
   "bugs": {
     "url": "https://github.com/gaureshph/TaskTrackerApp/issues"
   },
-  "homepage": "https://github.com/gaureshph/TaskTrackerApp#readme",
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "dotenv": "^17.2.1",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.100.2",
@@ -35,7 +36,11 @@
     "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^7.7.1",
+    "styled-components": "^6.1.19"
   }
 }
